Fix overlapping logo on small login screen sizes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -392,7 +392,7 @@ input.noedit {
         text-indent: -9000em;
         background: url(/images/logo_ds_clean.svg) no-repeat top center;
         background-size: contain;
-        z-index: 1000;
+        z-index: 79;
     }
     .image-attribution {
         position: fixed;
